# ezMerge

./: Cargo.toml  LICENSE  Makefile  README.md  demo.sh  install.sh  server.py
ezmerge-ci/: run_checks.sh
ezmerge-cli/: Cargo.toml
ezmerge-cli/src/: db.rs  doctor.rs  info.rs  install.rs  main.rs  overlay.rs  search.rs
ezmerge-docs/: index.md  portage-basics.md  writing-ebuilds.md
ezmerge-overlay/app-admin/ezmerge-cli/: ezmerge-cli-0.1.0.ebuild
ezmerge-overlay/metadata/: layout.conf
ezmerge-overlay/profiles/: categories  repo_name
ezmerge-web/: app.js  db.json  index.html  style.css
