[package]
name = "ezmerge-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dialoguer = "0.11"
colored = "2.1"
indicatif = "0.17"
anyhow = "1.0"
thiserror = "1.0"
libc = "0.2"

